@@ -1,5 +1,6 @@
 Revision history for Gtk3::SimpleList
 
+    Add repository details
     Fix URL
 
 0.19 Mon Apr 4 10:51:15 CEST 2020
